# oxinot

./: .gitignore  AGENTS.md  AUTOSCROLL_IMPROVEMENTS.md  AUTOSCROLL_OPTIMIZATION_SUMMARY.md  AUTOSCROLL_PERFORMANCE_ANALYSIS.md  CHANGELOG.md  COMPLETION_SUMMARY.md  COPILOT_ARCHITECTURE.md  COPILOT_BLOCK_NEWLINE_FIX.md  COPILOT_BLOCK_STRUCTURE_FIX.md  COPILOT_COMPLETENESS_ASSESSMENT.md  COPILOT_COMPLETION_SUMMARY.md  COPILOT_FIX_SUMMARY.md  COPILOT_FLOW_DIAGRAMS.md  COPILOT_HOW_IT_WORKS.md  COPILOT_QUICK_SUMMARY.md  COPILOT_TESTING_GUIDE.md  COPILOT_TOOL_ANALYSIS.md  DEPLOYMENT_COMPLETE.md  DEVELOPMENT_WORKFLOW.md  FINAL_COMPLETION_REPORT.md  FINAL_SUCCESS.md  GITHUB_WORKFLOW.md  IMPLEMENTATION_REPORT.md  KEYBOARD_LATENCY_FIX.md  LICENSE  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASES_2_5_COMPLETION.md  PHASE_1_COMPLETION.md  RACE_CONDITION_FIX.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  REFACTORING_TODO.md  REFACTOR_ERROR_HANDLING.md  RELEASE.md  RELEASES.md  RELEASE_PIPELINE_CHEATSHEET.md  SESSION_SUMMARY.md  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: block.rs  db.rs  git.rs  graph.rs  mod.rs  page.rs  query.rs  search.rs  todo.rs  wiki_link.rs  workspace.rs
src-tauri/src/db/: connection.rs  mod.rs  schema.rs
src-tauri/src/models/: block.rs  graph.rs  mod.rs  page.rs  query.rs  (+1 more)
src-tauri/tests/: p0_relative_paths_test.rs  sync_integration_test.rs  wiki_link_integration_test.rs
(+604 files in other folders)
