[package]
name = "oxinot"
version = "0.25.0"
description = "Oxinot - A modern markdown outliner"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oxinot_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2"
regex = "1.12.2"
thiserror = "1.0"
rand = "0.8"
tokio = { version = "1.49.0", features = ["fs", "io-util", "process"] }
async-recursion = "1.1.1"
tauri-plugin-http = "2.5.6"
